--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon app.js"
   },
-  "author": "Raghavendra medishetti",
+  "author": "Rishi Arya Juturu",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
